# cpp_sequence

./: .gitignore  CMakeLists.txt  README.md  notes.md
.github/workflows/: cpp_ci.yaml
benchmark/: reduce.benchmark.cpp
deprecated/src/: example_functions.hpp  iterate.hpp
deprecated/src/algorithm/: fold_left.hpp  to.hpp
deprecated/techniques/handcrafted/: find.cpp
deprecated/techniques/structured_program/: copy_if.cpp  find.cpp  plus_reduce.cpp  zip.cpp
deprecated/test/: test_fold_left.cpp  test_iterate.cpp
deprecated/v1/src/: common.hpp
deprecated/v1/test/: test_select.cpp
deprecated/v2/test/: test_find.cpp  test_fold_left_if.cpp
deprecated_v2/src/: until.hpp
deprecated_v2/test/: test_find.cpp  test_fold_left_if.cpp
prototype/: concept_filter.hpp  concept_from_iota.hpp  concept_stage.hpp  concept_take.hpp  concept_vector.hpp  crtp_base_stage.hpp  crtp_take.hpp
samples/continuation_passing_style/: find.cpp  plus_reduce.cpp
samples/handcrafted/: accumulate.cpp  find.cpp  plus_reduce.cpp
samples/structured_program/: copy_if.cpp  find.cpp  map.cpp  plus_reduce.cpp  zip.cpp
src/: basic_datatypes.hpp  compose.hpp  datatypes.hpp  emit.hpp  example_functions.hpp  example_predicates.hpp  fold_left.hpp  fold_left_if.hpp  generator.hpp  global_datatypes.hpp  iota_generator.hpp  iterate.hpp  iteration.hpp  map_stage.hpp  range_sink.hpp  select.hpp  selection.hpp  sequence.hpp  sink.hpp  stage.hpp
src/algorithm/: fold_left.hpp  from.hpp  get.hpp  to.hpp
src/functional/: identity.hpp
src/generator/: iota_generator.hpp
src/generic_stage/: emit.hpp  stage.hpp
src/prototype_stage/: concept_from_iota.hpp  concept_iota.hpp  concept_stage.hpp  concept_take.hpp  concept_vector.hpp  crtp_ base_stage.hpp  crtp_base_stage.hpp  crtp_take.hpp  direct_take.hpp
src/sink/: range_sink.hpp  to_range.hpp  to_value.hpp  to_vector.hpp  value_sink.hpp  vector_sink.hpp
src/source/: from_iota.hpp  from_range.hpp  from_vector.hpp  iota.hpp  iota_source.hpp
src/stage/: duplicate.hpp  filter.hpp  filter_stage.hpp  map.hpp  map_stage.hpp  reduce.hpp  reduce_stage.hpp  stage.hpp  take.hpp  take_stage.hpp
src/stage/generic/: emit.hpp  stage.hpp
test/: duplicate.test.cpp  filter.test.cpp  filter_stage.test.cpp  from_range.test.cpp  from_vector.test.cpp  generic_stage.test.cpp  map.test.cpp  map_stage.test.cpp  reduce.test.cpp  reduce_stage.test.cpp  sequence.test.cpp  stage.test.cpp  take.test.cpp  take_stage.test.cpp  test_compose.cpp  test_find.cpp  test_fold_left.cpp  test_fold_left_if.cpp  test_from.cpp  test_iterate.cpp  test_iteration.cpp  test_select.cpp  test_selection.cpp  test_sequence.cpp  test_to.cpp  toValue.test.cpp  toVector.test.cpp  to_value.test.cpp  to_vector.test.cpp  value_sink.test.cpp  vector_sink.test.cpp
test/prototype/: concept_take.test.cpp  crtp_take.test.cpp  direct_take.test.cpp
